gh: change branch name to develop for build trigger

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,9 +2,9 @@ name: Run PHP Tests with MySQL
 
 on:
     push:
-        branches: [ main ]
+        branches: [ develop ]
     pull_request:
-        branches: [ main ]
+        branches: [ develop ]
 
 jobs:
     test:
