--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,7 +46,7 @@ jobs:
                 done
               
                 # Create the table
-                mysql -h 127.0.0.1 -P 3306 -u root -proot testdb < /setup/setup.sql
+                mysql -h 127.0.0.1 -P 3306 -u root -proot testdb < scripts/setup.sql
 
             - name: Run tests
               env:
