--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
   "name": "s-mcdonald/norm",
-  "description": "Norm is a ORM",
+  "description": "Norm the ORM for nobody.",
   "keywords": ["ORM"],
   "homepage": "https://github.com/s-mcdonald/Norm",
   "license": "MIT",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "authors": [
     {
       "name": "Sam McDonald",
